[tool.poetry]
name = "pdf-edit"
version = "0.1.0"
description = "select pages from a pdf file"
authors = ["Peter Isaac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"

[tool.poetry.scripts]
start = "index:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
